--- a/client/src/Components/Appointment/appointment.scss
+++ b/client/src/Components/Appointment/appointment.scss
@@ -189,22 +189,19 @@
     }
   }
   ul.ul-legend {
-    list-style: none;
-    display: inline-block;
     li {
-      display: inline;
-      margin-left: 5px;
-      border: 1px solid #000;
-      span:first-child {
-        display: inline-block;
-        padding: 10px;
-      }
-      span:last-child {
-        display: inline-block;
-        font-size: 0.8rem;
-        line-height: 0px;
-        vertical-align: super;
-        margin-left: 5px;
+      float: left;
+      margin-right: 10px;
+      list-style: none;
+      margin-top: 5px;
+      font-size: 0.7rem;
+      span {
+        border: 1px solid #ccc;
+        float: left;
+        width: 12px;
+        height: 12px;
+        margin: 2px;
+        margin-right: 5px;
       }
     }
   }
