--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -6,6 +6,14 @@ body {
 :global .header {
   max-height: 50px; }
 
+:global .inner-top-search {
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 0;
+  border: none;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
+  padding-top: 5px; }
+
 :global .tab-container .tab-button {
   font-weight: normal;
   border-radius: 0px;
