--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -8,6 +8,15 @@ body {
   .header {
     max-height: 50px;
   }
+.inner-top-search{
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 0;
+  border: none;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
+  padding-top: 5px;
+}
+
   .tab-container {
     .tab-button {
       // font-size: 12px;
