--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -14,6 +14,14 @@ body {
   margin-bottom: 10px;
   padding-top: 5px; }
 
+:global .algaehLabelGroup {
+  font-weight: bold;
+  text-decoration: underline;
+  text-transform: inherit;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  color: #369c92; }
+
 :global .tab-container .tab-button {
   font-weight: normal;
   border-radius: 0px;
