--- a/client/src/Components/experiment.scss
+++ b/client/src/Components/experiment.scss
@@ -1,155 +1,3 @@
 .experiment {
-  padding: 10px;
-
-  .pain-scale-ul {
-    margin: auto;
-    padding: auto;
-    list-style: none;
-
-    li {
-      background: url("../assets/images/pain_scale.png") no-repeat center
-        transparent;
-      width: 31px;
-      height: 31px;
-      display: inline-block;
-      cursor: pointer;
-      margin-right: 10px;
-    }
-    .pain-1 {
-      background-position: 0px 0px;
-    }
-    .pain-2 {
-      background-position: 0px -32px;
-    }
-    .pain-3 {
-      background-position: 0px -65px;
-    }
-    .pain-4 {
-      background-position: 0px -98px;
-    }
-    .pain-5 {
-      background-position: 0px -130px;
-    }
-    .pain-6 {
-      background-position: 0px -163px;
-    }
-    .active {
-      border-radius: 100%;
-      box-shadow: 0 3px 8px #00000063;
-    }
-  }
-
-  .pain_slider {
-    max-width: 350px;
-    margin: 20px;
-    padding: auto;
-  }
-}
-
-.feather {
-  width: 16px;
-  height: 16px;
-  vertical-align: text-bottom;
-}
-
-/*
- * Sidebar
- */
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
-}
-
-.sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - 48px);
-  padding-top: 0.5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-  background: #212529;
-}
-
-@supports ((position: -webkit-sticky) or (position: sticky)) {
-  .sidebar-sticky {
-    position: -webkit-sticky;
-    position: sticky;
-  }
-}
-
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
-}
-
-.sidebar .nav-link .feather {
-  margin-right: 4px;
-  color: #999;
-}
-
-.sidebar .nav-link.active {
-  color: #007bff;
-}
-
-.sidebar .nav-link:hover .feather,
-.sidebar .nav-link.active .feather {
-  color: inherit;
-}
-
-.sidebar-heading {
-  font-size: 0.75rem;
-  text-transform: uppercase;
-}
-
-/*
- * Content
- */
-
-[role="main"] {
-  padding-top: 48px; /* Space for fixed navbar */
-}
-
-/*
- * Navbar
- */
-.bg-algaeh {
-  background: #00bcb0;
-}
-.navbar-brand {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  font-size: 1rem;
-  background-color: #00bcb0;
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25);
-}
-
-.navbar .form-control {
-  padding: 0.75rem 1rem;
-  border-width: 0;
-  border-radius: 0;
-}
-
-.form-control-dark {
-  color: #fff;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-color: rgba(255, 255, 255, 0.1);
-}
-
-.form-control-dark:focus {
-  border-color: transparent;
-  box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
-}
-
-.editor {
-  .quill {
-    .ql-container {
-      min-height: 40vh;
-    }
-  }
+  background-color: aqua;
 }
