--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -1,2 +1,3 @@
-.selected-grid-row {
-  background-color: gold !important; }
+.selected-grid-row.-odd .rt-td,
+.selected-grid-row.-even .rt-td {
+  background-color: #d9fdff !important; }
