--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -1,3 +1,4 @@
-.selected-grid-row {
-  background-color: gold !important;
+.selected-grid-row.-odd .rt-td,
+.selected-grid-row.-even .rt-td {
+  background-color: #d9fdff !important;
 }
